# mcp

./: README.md
database_server/: README.md  database_server.py  pyproject.toml
database_server/databases/: sample.db
medical_api_server/: README.md  medical_api_server.py  pyproject.toml
medical_api_server/medical_api_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
terminal_server/: pyproject.toml  terminal_server.py
webapi_server/: README.md  __init__.py  pyproject.toml  webapi_server.py
