[project]
name = "database-server"
version = "0.1.0"
description = "MCP server for database operations with SQLite and MySQL support"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0",
    "mysql-connector-python>=8.0.0"
]

[project.scripts]
database-server = "database_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []