[project]
name = "medical-api-server"
version = "0.1.0"
description = "Medical API MCP Server for fetching medical data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
medical-api-server = "medical_api_server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"