[project]
name = "webapi-server"
version = "0.1.0"
description = "MCP server for web API operations with HTTP request support"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0"
]

[project.scripts]
webapi-server = "webapi_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []